Implementing and testing updateSellingMeasurement method in ProductSellingMeasurementServiceImpl class, then moving the method to ProductSellingMeasurementService interface